isma-lisma/src/main/java/ru/nstu/isma/lisma/analysis/gen/LismaParser.java
// Generated from C:/Users/SmallBoss/Documents/Projects/ISMA/isma-lisma/src/main/resources/ru/nstu/isma/in/lisma\Lisma.g4 by ANTLR 4.9
package ru.nstu.isma.lisma.analysis.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LismaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, CONST_KEYWORD=44, PDE=45, 
		FOR_KEYWORD=46, STATE_KEYWORD=47, FROM_KEYWORD=48, IF_KEYWORD=49, DecimalLiteral=50, 
		FloatingPointLiteral=51, Identifier=52, WS=53, COMMENT=54, SL_COMMENT=55, 
		LPAREN=56, RPAREN=57, LBRACE=58, RBRACE=59, LBRACK=60, RBRACK=61, SEMI=62, 
		COMMA=63, DOT=64, QUOTE1=65, QUOTE2=66, ASSIGN=67, GT=68, LT=69, TILDE=70, 
		QUESTION=71, COLON=72, EQUAL=73, LE=74, GE=75, NOTEQUAL=76, INC=77, DEC=78, 
		ADD=79, SUB=80, MUL=81, DIV=82, BITAND=83, BITOR=84, CARET=85, MOD=86, 
		ADD_ASSIGN=87, SUB_ASSIGN=88, MUL_ASSIGN=89, DIV_ASSIGN=90, AND_ASSIGN=91, 
		OR_ASSIGN=92, XOR_ASSIGN=93, MOD_ASSIGN=94, LSHIFT_ASSIGN=95, RSHIFT_ASSIGN=96, 
		URSHIFT_ASSIGN=97;
	public static final int
		RULE_lisma = 0, RULE_statement = 1, RULE_constant = 2, RULE_constant_body = 3, 
		RULE_init_const = 4, RULE_spatial_var = 5, RULE_spatial_var_bound = 6, 
		RULE_spatial_var_tail = 7, RULE_spatial_var_tail_APX = 8, RULE_spatial_var_tail_STEP = 9, 
		RULE_partial_operand = 10, RULE_partial_operand_common = 11, RULE_partial_operand_mixed = 12, 
		RULE_partial_operand_spatial_common = 13, RULE_partial_operand_spatial_N = 14, 
		RULE_partial_operand_func_spatial = 15, RULE_partial_operand_D = 16, RULE_partial_operand_mixed_D = 17, 
		RULE_partial_operand_func_spatial_common = 18, RULE_partial_operand_func_spatial_2 = 19, 
		RULE_partial_operand_func_spatial_3 = 20, RULE_partial_operand_func_spatial_4 = 21, 
		RULE_partial_operand_unknown_code = 22, RULE_partial_operand_spatial_var_code = 23, 
		RULE_edge = 24, RULE_edge_eq = 25, RULE_edge_side = 26, RULE_init_cond = 27, 
		RULE_init_cond_body = 28, RULE_equation = 29, RULE_ode_equation = 30, 
		RULE_pde_equation = 31, RULE_pde_equation_param = 32, RULE_partial_operand_with_param = 33, 
		RULE_pde_param = 34, RULE_pde_param_atom = 35, RULE_for_cycle = 36, RULE_for_cycle_interval = 37, 
		RULE_for_cycle_body = 38, RULE_state = 39, RULE_state_body = 40, RULE_state_from = 41, 
		RULE_state_name = 42, RULE_pseudo_state = 43, RULE_pseudo_state_body = 44, 
		RULE_pseudo_state_elem = 45, RULE_pseudo_state_else = 46, RULE_func_and_math_mapping = 47, 
		RULE_arg_list = 48, RULE_derivative_ident = 49, RULE_derivative_quote_operant = 50, 
		RULE_variable = 51, RULE_var_ident = 52, RULE_cycle_index = 53, RULE_cycle_index_idx = 54, 
		RULE_cycle_index_posfix = 55, RULE_parExpression = 56, RULE_parExpressionLeftPar = 57, 
		RULE_parExpressionRightPar = 58, RULE_expression = 59, RULE_conditionalExpression = 60, 
		RULE_conditionalOrExpression = 61, RULE_conditionalAndExpression = 62, 
		RULE_equalityExpression = 63, RULE_equalityExpressionOperator = 64, RULE_relationalExpression = 65, 
		RULE_relationalOp = 66, RULE_additiveExpression = 67, RULE_additiveExpressionOperator = 68, 
		RULE_multiplicativeExpression = 69, RULE_multiplicativeExpressionOperator = 70, 
		RULE_unaryExpression = 71, RULE_unaryExpressionOperator = 72, RULE_unaryExpressionNotPlusMinus = 73, 
		RULE_primary = 74, RULE_primary_id = 75, RULE_literal = 76, RULE_or_operator = 77, 
		RULE_and_operator = 78, RULE_not_operator = 79, RULE_macros = 80, RULE_macro_item = 81, 
		RULE_setter = 82, RULE_linear_vars = 83, RULE_linear_eq = 84, RULE_linear_eq_b = 85, 
		RULE_linear_eq_A = 86, RULE_linear_eq_A_elem = 87, RULE_linear_eq_A_elem_expr = 88, 
		RULE_start = 89, RULE_end = 90, RULE_step = 91, RULE_out = 92;
	private static String[] makeRuleNames() {
		return new String[] {
			"lisma", "statement", "constant", "constant_body", "init_const", "spatial_var", 
			"spatial_var_bound", "spatial_var_tail", "spatial_var_tail_APX", "spatial_var_tail_STEP", 
			"partial_operand", "partial_operand_common", "partial_operand_mixed", 
			"partial_operand_spatial_common", "partial_operand_spatial_N", "partial_operand_func_spatial", 
			"partial_operand_D", "partial_operand_mixed_D", "partial_operand_func_spatial_common", 
			"partial_operand_func_spatial_2", "partial_operand_func_spatial_3", "partial_operand_func_spatial_4", 
			"partial_operand_unknown_code", "partial_operand_spatial_var_code", "edge", 
			"edge_eq", "edge_side", "init_cond", "init_cond_body", "equation", "ode_equation", 
			"pde_equation", "pde_equation_param", "partial_operand_with_param", "pde_param", 
			"pde_param_atom", "for_cycle", "for_cycle_interval", "for_cycle_body", 
			"state", "state_body", "state_from", "state_name", "pseudo_state", "pseudo_state_body", 
			"pseudo_state_elem", "pseudo_state_else", "func_and_math_mapping", "arg_list", 
			"derivative_ident", "derivative_quote_operant", "variable", "var_ident", 
			"cycle_index", "cycle_index_idx", "cycle_index_posfix", "parExpression", 
			"parExpressionLeftPar", "parExpressionRightPar", "expression", "conditionalExpression", 
			"conditionalOrExpression", "conditionalAndExpression", "equalityExpression", 
			"equalityExpressionOperator", "relationalExpression", "relationalOp", 
			"additiveExpression", "additiveExpressionOperator", "multiplicativeExpression", 
			"multiplicativeExpressionOperator", "unaryExpression", "unaryExpressionOperator", 
			"unaryExpressionNotPlusMinus", "primary", "primary_id", "literal", "or_operator", 
			"and_operator", "not_operator", "macros", "macro_item", "setter", "linear_vars", 
			"linear_eq", "linear_eq_b", "linear_eq_A", "linear_eq_A_elem", "linear_eq_A_elem_expr", 
			"start", "end", "step", "out"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'def'", "'var'", "'apx'", "'step'", "'D'", "'DD'", "'dx'", "'dy'", 
			"'dz'", "'dx2'", "'dy2'", "'dz2'", "'dx3'", "'dy3'", "'dz3'", "'dx4'", 
			"'dy4'", "'dz4'", "'edge'", "'on'", "'left'", "'right'", "'both'", "'t0'", 
			"'ic'", "'init'", "'else'", "'der'", "'||'", "'or'", "'OR'", "'&&'", 
			"'and'", "'AND'", "'!'", "'not'", "'NOT'", "'macro'", "'set'", "'ls'", 
			"'start'", "'end'", "'out'", "'const'", "'pde'", "'for'", "'state'", 
			"'from'", "'if'", null, null, null, null, null, null, "'('", "')'", "'{'", 
			"'}'", "'['", "']'", "';'", "','", "'.'", "'''", "'\u043F\u0457\u0405'", 
			"'='", "'>'", "'<'", "'~'", "'?'", "':'", "'=='", "'<='", "'>='", "'!='", 
			"'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'&'", "'|'", "'^'", "'%'", 
			"'+='", "'-='", "'*='", "'/='", "'&='", "'|='", "'^='", "'%='", "'<<='", 
			"'>>='", "'>>>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "CONST_KEYWORD", "PDE", 
			"FOR_KEYWORD", "STATE_KEYWORD", "FROM_KEYWORD", "IF_KEYWORD", "DecimalLiteral", 
			"FloatingPointLiteral", "Identifier", "WS", "COMMENT", "SL_COMMENT", 
			"LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", 
			"DOT", "QUOTE1", "QUOTE2", "ASSIGN", "GT", "LT", "TILDE", "QUESTION", 
			"COLON", "EQUAL", "LE", "GE", "NOTEQUAL", "INC", "DEC", "ADD", "SUB", 
			"MUL", "DIV", "BITAND", "BITOR", "CARET", "MOD", "ADD_ASSIGN", "SUB_ASSIGN", 
			"MUL_ASSIGN", "DIV_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", 
			"MOD_ASSIGN", "LSHIFT_ASSIGN", "RSHIFT_ASSIGN", "URSHIFT_ASSIGN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Lisma.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LismaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class LismaContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public LismaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lisma; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LismaListener ) ((LismaListener)listener).enterLisma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LismaListener ) ((LismaListener)listener).exitLisma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LismaVisitor ) return ((LismaVisitor<? extends T>)visitor).visitLisma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LismaContext lisma() throws RecognitionException {
		LismaContext _localctx = new LismaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_lisma);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__24) | (1L << T__27) | (1L << T__37) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << CONST_KEYWORD) | (1L << PDE) | (1L << FOR_KEYWORD) | (1L << STATE_KEYWORD) | (1L << IF_KEYWORD) | (1L << Identifier))) != 0)) {
				{
				{
				setState(186);
				statement();
				}
				}
				setState(191);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public Init_constContext init_const() {
			return getRuleContext(Init_constContext.class,0);
		}
		public Init_condContext init_cond() {
			return getRuleContext(Init_condContext.class,0);
		}
		public EquationContext equation() {
			return getRuleContext(EquationContext.class,0);
		}
		public StateContext state() {
			return getRuleContext(StateContext.class,0);
		}
		public Pseudo_stateContext pseudo_state() {
			return getRuleContext(Pseudo_stateContext.class,0);
		}
		public Spatial_varContext spatial_var() {
			return getRuleContext(Spatial_varContext.class,0);
		}
		public EdgeContext edge() {
			return getRuleContext(EdgeContext.class,0);
		}
		public MacrosContext macros() {
			return getRuleContext(MacrosContext.class,0);
		}
		public StartContext start() {
			return getRuleContext(StartContext.class,0);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public StepContext step() {
			return getRuleContext(StepContext.class,0);
		}
		public OutContext out() {
			return getRuleContext(OutContext.class,0);
		}
		public Linear_eqContext linear_eq() {
			return getRuleContext(Linear_eqContext.class,0);
		}
		public Linear_varsContext linear_vars() {
			return getRuleContext(Linear_varsContext.class,0);
		}
		public For_cycleContext for_cycle() {
			return getRuleContext(For_cycleContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LismaListener ) ((LismaListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LismaListener ) ((LismaListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LismaVisitor ) return ((LismaVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(208);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(192);
				constant();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(193);
				init_const();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(194);
				init_cond();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(195);
				equation();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(196);
				state();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(197);
				pseudo_state();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(198);
				spatial_var();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(199);
				edge();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(200);
				macros();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(201);
				start();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(202);
				end();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(203);
				step();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(204);
				out();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(205);
				linear_eq();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(206);
				linear_vars();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(207);
				for_cycle();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public TerminalNode CONST_KEYWORD() { return getToken(LismaParser.CONST_KEYWORD, 0); }
		public List<Constant_bodyContext> constant_body() {
			return getRuleContexts(Constant_bodyContext.class);
		}
		public Constant_bodyContext constant_body(int i) {
			return getRuleContext(Constant_bodyContext.class,i);
		}
		public TerminalNode SEMI() { return getToken(LismaParser.SEMI, 0); }
		public List<TerminalNode> COMMA() { return getTokens(LismaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(LismaParser.COMMA, i);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LismaListener ) ((LismaListener)listener).enterConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LismaListener ) ((LismaListener)listener).exitConstant(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LismaVisitor ) return ((LismaVisitor<? extends T>)visitor).visitConstant(this);
			else return visitor.visitChildren(this);
		}
	}
